--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="icon" href="favicon.png">
 
-    <title>Scrolling Nav - Start Bootstrap Template</title>
+    <title>AlexMTMorgan's Homepage</title>
 
     <!-- Bootstrap -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
